# pytest_generator_setup

./: README.md  generate_all_tests.x  generate_answers.x  generate_homework_tests.x  generate_structure.x  pyproject.toml
